manifests/hgate/istio.yaml
# The HBone gateway can also be used to reach in-cluster Istiod. This will be merged with the east-west gateway,
# so it needs to keep the same features

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hgate-istiod
  namespace: istio-system
spec:
  selector:
    istio: hgate
  servers:
    - port:
        name: tls-istiod
        number: 15012
        protocol: tls
      tls:
        mode: PASSTHROUGH
      hosts:
        - "*"
    - port:
        name: tls-istiodtest
        number: 15099
        protocol: tls
      tls:
        mode: PASSTHROUGH
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hgate-istiod
  namespace: istio-system
spec:
  hosts:
    - "*"
  gateways:
    - hgate-istiod
  tls:
    - match:
        - port: 15012
          sniHosts:
            - "*"
      route:
        - destination:
            host: istiod.istio-system.svc.cluster.local
            port:
              number: 15012
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hgate-istiod
spec:
  host: istiod.istio-system.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 15012
        tls:
          mode: DISABLE
